src/test/resources/lox/error/error_obj.lox
var err = Error("Error");
print err.message; // expect: Error
